[project]
name = "brownie-test"
version = "0.0.1"
description = "Brownie test utils"
#authors = []
license = { file = "LICENSE" }
readme = "README.md"
#homepage = ""
#repository = ""
#documentation =

keywords = ["ethereum", "evm", "smart contract", "development", "testing"]

classifiers = ["Topic :: Software Development"]

# Requirements
dependencies = [
    "eth-abi",
    "py-evm",
    "eth-typing",
    "hypothesis",
    "pytest",
]

[project.optional-dependencies]
forking-recommended = [
    "plyvel",
    "ujson",
]

[build-system]
requires = ["setuptools", "wheel"]

[tool.setuptools.packages.find]
include = ["brownie-test*"]

#[dev-dependencies]
#black = { version = "^18.3-alpha.0", python = "^3.6" }
